# github-activity-pipeline

./: Database-Design.drawio  High-Level-Arch.drawio  main.py  pyproject.toml  testing.ipynb
extractor/: .gitignore  extractor.py  pyproject.toml  repos.txt  table_creation_script.py  testing.ipynb
transformer/transformer/: dbt_project.yml
transformer/transformer/models/: sources.yml
transformer/transformer/models/staging/: stg_commits.sql  stg_forks.sql  stg_issues.sql  stg_repos.sql  stg_stars.sql
